--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,7 @@
       { label: '小辣', motor: 'motor14' },
         { label: '中辣', motor: 'motor15' },
         { label: '大辣', motor: 'motor16' },
+        { label: '大大辣', motor: 'motor15' },
       ],
     };
 
@@ -215,33 +216,30 @@
     });
 
     function prepareDelivery(motorKey) {
-  if (lockStatus[motorKey]) return;
+      if (lockStatus[motorKey]) return;
+      selectedMotor = motorKey;
+      lockStatus[motorKey] = true;
+      updateLockUI();
+      goBack();
 
-  selectedMotor = motorKey;
-  lockStatus[motorKey] = true;
-  updateLockUI(); // 立即鎖定所有同 motor 的按鈕
+      setTimeout(() => {
+        lockStatus[motorKey] = false;
+        updateLockUI();
+      }, 7000);
 
-  // 7 秒後自動解鎖
-  setTimeout(() => {
-    lockStatus[motorKey] = false;
-    updateLockUI();
-  }, 7000);
+      document.getElementById('menu').style.display = 'none';
+      document.getElementById('map').style.display = 'block';
+      startGeoTracking();
 
-  // 接下來可以繼續跑你的動畫／外送員邏輯
-  document.getElementById('menu').style.display = 'none';
-  document.getElementById('map').style.display = 'block';
-  startGeoTracking();
+      const courier = document.getElementById('courier');
+      courier.style.left = '150px';
+      courier.style.top = '150px';
 
-  const courier = document.getElementById('courier');
-  courier.style.left = '150px';
-  courier.style.top = '150px';
-
-  setTimeout(() => {
-    document.getElementById('map').style.display = 'none';
-    document.getElementById('delivered').style.display = 'block';
-  }, 10000);
-}
-
+      setTimeout(() => {
+        document.getElementById('map').style.display = 'none';
+        document.getElementById('delivered').style.display = 'block';
+      }, 10000);
+    }
 
     async function confirmDelivery() {
       document.getElementById('delivered').style.display = 'none';
@@ -278,34 +276,33 @@
     }
 
     function updateLockUI() {
-  const allButtons = document.querySelectorAll('.order-btn');
-  allButtons.forEach(btn => {
-    const motorKey = btn.dataset.motor;
-    if (lockStatus[motorKey]) {
-      btn.style.display = 'none';
-    } else {
-      btn.style.display = 'inline-block';
+      document.querySelectorAll('.section').forEach(section => {
+        const buttons = section.querySelectorAll('.order-btn');
+        const lockedMessage = section.querySelector('.locked-message');
+        const backButton = section.querySelector('.back-button');
+
+        let allLocked = true;
+        buttons.forEach(btn => {
+          const motorKey = btn.dataset.motor;
+          if (lockStatus[motorKey]) {
+            btn.style.display = 'none';
+          } else {
+            btn.style.display = 'inline-block';
+            allLocked = false;
+          }
+        });
+
+        if (allLocked) {
+          section.classList.add('locked');
+          if (lockedMessage) lockedMessage.style.display = 'block';
+          if (backButton) backButton.style.display = 'inline-block';
+        } else {
+          section.classList.remove('locked');
+          if (lockedMessage) lockedMessage.style.display = 'none';
+          if (backButton) backButton.style.display = 'none';
+        }
+      });
     }
-  });
-
-  document.querySelectorAll('.section').forEach(section => {
-    const buttons = section.querySelectorAll('.order-btn');
-    const lockedMessage = section.querySelector('.locked-message');
-    const backButton = section.querySelector('.back-button');
-
-    const allLocked = Array.from(buttons).every(btn => lockStatus[btn.dataset.motor]);
-    if (allLocked) {
-      section.classList.add('locked');
-      if (lockedMessage) lockedMessage.style.display = 'block';
-      if (backButton) backButton.style.display = 'inline-block';
-    } else {
-      section.classList.remove('locked');
-      if (lockedMessage) lockedMessage.style.display = 'none';
-      if (backButton) backButton.style.display = 'none';
-    }
-  });
-}
-
 
     function goBack() {
       document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
