--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,11 @@
   <div id="menu" class="menu"></div>
 
   <div id="map">
-    <div id="animation" style="display:none; text-align:center;">
-      <img id="courierAnimation" src="" style="width:150px; height:auto;">
-      <p>外送員正在配送中…</p>
+    <img id="courierAnimation" src="" style="position:absolute; top:50px; left:50px; width:100px; image-rendering: pixelated;">
+    <div id="courier"></div>
+    <div id="user"></div>
+    <div id="arrow"></div>
+    <p>外送員正在前往您所在位置...</p>
   </div>
 
   <div id="delivered">
@@ -108,33 +110,6 @@
   </div>
 
   <script>
-    function startAnimationSequence() {
-  const animation = document.getElementById('animation');
-  const img = document.getElementById('courierAnimation');
-
-  const frames = [
-    { src: 'IMG_4596.PNG', duration: 1000 },
-    { src: 'IMG_4598.PNG', duration: 2500 },
-    { src: 'IMG_4596.PNG', duration: 1000 },
-    { src: 'IMG_4598.PNG', duration: 2500 }
-  ];
-
-  let i = 0;
-
-  function nextFrame() {
-    if (i >= frames.length) {
-      animation.style.display = 'none';
-      document.getElementById('delivered').style.display = 'block';
-      return;
-    }
-    img.src = frames[i].src;
-    setTimeout(nextFrame, frames[i].duration);
-    i++;
-  }
-
-  nextFrame();
-}
-
     // 定位與方向偵測
     function startGeoTracking() {
       navigator.geolocation.watchPosition(pos => {
@@ -148,6 +123,8 @@
         arrow.style.left = '155px';
         arrow.style.top = '140px';
       });
+      startAnimationSequence();
+
 
       if (window.DeviceOrientationEvent) {
         window.addEventListener('deviceorientation', e => {
@@ -241,6 +218,38 @@
       menuDiv.appendChild(section);
     });
 
+    function startAnimationSequence() {
+  const animation = document.getElementById('courierAnimation');
+  const frames = [
+    { src: 'IMG_4596.PNG', duration: 1000 },
+    { src: 'IMG_4598.PNG', duration: 2500 },
+    { src: 'IMG_4596.PNG', duration: 1000 },
+  ];
+
+  let timePassed = 0;
+  let frameIndex = 0;
+
+  function playNextFrame() {
+    if (timePassed >= 10000) {
+      animation.style.display = 'none';
+      return;
+    }
+
+    const current = frames[frameIndex % frames.length];
+    animation.src = current.src;
+    animation.style.display = 'block';
+
+    setTimeout(() => {
+      timePassed += current.duration;
+      frameIndex++;
+      playNextFrame();
+    }, current.duration);
+  }
+
+  playNextFrame();
+}
+
+
     function prepareDelivery(motorKey) {
       if (lockStatus[motorKey]) return;
       selectedMotor = motorKey;
@@ -254,11 +263,17 @@
       }, 7000);
 
       document.getElementById('menu').style.display = 'none';
-document.getElementById('map').style.display = 'none';
-document.getElementById('animation').style.display = 'block';
+      document.getElementById('map').style.display = 'block';
+      startGeoTracking();
 
-startAnimationSequence(); // 開始圖片輪替動畫
+      const courier = document.getElementById('courier');
+      courier.style.left = '150px';
+      courier.style.top = '150px';
 
+      setTimeout(() => {
+        document.getElementById('map').style.display = 'none';
+        document.getElementById('delivered').style.display = 'block';
+      }, 10000);
     }
 
     async function confirmDelivery() {
